# f1-predictor

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  F1 Predictor - Context  LICENSE  QUICKSTART.md  README.md  context_cursor.txt  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
.github/workflows/: ci.yml
api/: main.py
docs/: installation.md  workflow-session.md
scripts/: end_session.py  setup_project.py  start_session.py
src/: __init__.py
src/data/: __init__.py
src/data/collectors/: ergast_collector.py
